--- a/src/App.css
+++ b/src/App.css
@@ -60,12 +60,14 @@ body {
   position: absolute;
   top: 20%;
   left: -60px;
+  z-index: -1;
 }
 
 #right1 {
   position: absolute;
   top: 50%;
   right: -60px;
+  z-index: -1;
 }
 
 /* MEDIA QUERIES */
