--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   overflow-x: hidden;
+  margin-bottom: 5rem;
 }
 
 /* ROCKET */
@@ -54,7 +55,7 @@ body {
 }
 
 .btn-extra {
-  width: 16rem;
+  min-width: 16rem;
   height: 4.5rem;
   font-size: 2.2rem;
   font-weight: 500;
