--- a/src/components/courseListing/CourseContainer.css
+++ b/src/components/courseListing/CourseContainer.css
@@ -1,7 +1,22 @@
 .limitP {
-    height:  80px;
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  height: 80px;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
+.search-form {
+  border-radius: 30px 0px 0px 30px;
+  border: none;
+  background-color: #e5e7e9;
+}
+
+.search-form:focus {
+  background-color: #e5e7e9;
+}
+
+.search-btn {
+  border-radius: 0px 30px 30px 0px;
+  border: none;
+  cursor: pointer;
+}
