--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,12 @@ body {
 .btn-rounded {
   font-size: 1.4rem;
   border-radius: 40px;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.btn-sm {
+  font-size: 1rem;
 }
 
 .btn-orange {
@@ -94,7 +98,7 @@ body {
 #right1 {
   position: absolute;
   top: 50%;
-  right: -60px;
+  right: 0;
   z-index: -1;
 }
 
