--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,8 @@ body {
   height: 4.5rem;
   font-size: 2.2rem;
   font-weight: 500;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 /* TEXT */
@@ -110,8 +112,8 @@ body {
   /* SHOWCASE */
   .showcase-header {
     margin-top: 30px;
-    font-size: 35px;
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: 1500 !important;
   }
 
   .showcase-text {
@@ -137,7 +139,7 @@ body {
 
   .showcase-header {
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 1500; 
     text-align: center;
   }
 
