--- a/src/components/courseListing/CourseContainer.css
+++ b/src/components/courseListing/CourseContainer.css
@@ -15,7 +15,7 @@
 
 .search-form {
   padding-left: 1.5rem;
-  height: 3rem;
+  height: 3em;
   border-radius: 30px 0px 0px 30px;
   border: none;
   background-color: #e5e7e9;
@@ -26,7 +26,7 @@
 }
 
 .search-btn {
-  height: 3rem;
+  height: 3em;
   border-radius: 0px 30px 30px 0px;
   padding-right: 2rem;
   padding-left: 2rem;
@@ -38,11 +38,7 @@
   height: 140px;
 }
 
-
 h5 .card-title {
-
-
-
   display: block !important ;
   display: -webkit-box !important;
   -webkit-line-clamp: 2 !important;
@@ -59,7 +55,6 @@ h5 .card-title {
 }
 
 .course-card-body {
-
   height: 15rem;
 }
 
@@ -70,4 +65,3 @@ h5 .card-title {
 .card:hover {
   cursor: pointer;
 }
-
