--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
 
 /* NAVBAR */
 .navbar {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
 
 .navbar-light-orange {
@@ -43,7 +43,7 @@ body {
 
 /* BUTTONS */
 .btn-rounded {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   border-radius: 40px;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -68,10 +68,12 @@ body {
 }
 
 .btn-extra {
-  min-width: 16rem;
-  height: 4.5rem;
-  font-size: 2.2rem;
+  min-width: 20rem;
+  height: 6rem;
+  font-size: 2.6rem;
   font-weight: 500;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 /* TEXT */
@@ -114,7 +116,7 @@ body {
   /* SHOWCASE */
   .showcase-header {
     margin-top: 30px;
-    font-size: 35px;
+    /* font-size: 35px; */
     font-weight: 500;
   }
 
@@ -130,7 +132,7 @@ body {
 
   .btn-extra {
     width: 10rem;
-    height: 3.4rem;
+    height: 4.5rem;
     font-size: 1.5rem;
     font-weight: 500;
   }
@@ -140,7 +142,7 @@ body {
   }
 
   .showcase-header {
-    font-size: 2rem;
+    /* font-size: 2rem; */
     font-weight: 500;
     text-align: center;
   }
