--- a/src/App.css
+++ b/src/App.css
@@ -174,3 +174,9 @@ body {
   text-align: center;
   font-size: 11px;
 }
+
+.edge {
+  /* border: 0.1px solid rgba(0, 0, 0, 0.411); */
+  background-color: rgba(255, 255, 255, 0.301);
+  padding: 10px 10px 10px 10px;
+}
