--- a/src/components/courseListing/CourseContainer.css
+++ b/src/components/courseListing/CourseContainer.css
@@ -15,7 +15,7 @@
 
 .search-form {
   padding-left: 1.5rem;
-  height: 3rem;
+  height: 3.5em;
   border-radius: 30px 0px 0px 30px;
   border: none;
   background-color: #e5e7e9;
@@ -26,7 +26,7 @@
 }
 
 .search-btn {
-  height: 3rem;
+  height: 3.5em;
   border-radius: 0px 30px 30px 0px;
   padding-right: 2rem;
   padding-left: 2rem;
@@ -47,10 +47,11 @@ h5 .card-title {
   text-overflow: ellipsis !important;
   white-space: normal;
   max-width: 200px;
-  height: 80px; 
-  margin: 0 auto ;
-  line-height: 1.3;  
-  font-size: 18px
+
+  height: 80px;
+  margin: 0 auto;
+  line-height: 1.3;
+  font-size: 18px;
 }
 
 .course-card-body {
@@ -58,9 +59,9 @@ h5 .card-title {
 }
 
 .modal-title {
-  font-size: 1.5rem
+  font-size: 1.5rem;
 }
 
 .card:hover {
-  cursor: pointer
+  cursor: pointer;
 }
