--- a/src/App.css
+++ b/src/App.css
@@ -180,3 +180,28 @@ body {
   background-color: rgba(255, 255, 255, 0.301);
   padding: 10px 10px 10px 10px;
 }
+
+.underline-on-hover {
+  border-bottom: 4px solid salmon;
+  border-radius: 5px;
+}
+
+.mycoursePage {
+  /* background-color: rgba(196, 201, 252, 0.226); */
+  background-color: rgba(255, 255, 255, 0.226);
+}
+
+.courseCard {
+  border: 1px solid rgba(192, 192, 192, 0.404);
+  width: 100%;
+  display: flex;
+}
+
+.text {
+  /* display: block; */
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
