--- a/src/App.css
+++ b/src/App.css
@@ -253,3 +253,18 @@ table {
 .list-group-item:hover {
   z-index: auto;
 }
+
+/* Addons */
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
